--- a/mongodb-crud-to-do-list/.env.example
+++ b/mongodb-crud-to-do-list/.env.example
@@ -1,4 +1,5 @@
 APP_PORT=3000
 MONGODB_URL=mongodb://mongodb:27017
+MONGODB_TESTS_URL=mongodb://mongodb:27017
 BASE_URL=
 NAME=mongodb-crud-to-do-list
