--- a/mongodb-crud-to-do-list/docker-compose-ci.yml
+++ b/mongodb-crud-to-do-list/docker-compose-ci.yml
@@ -3,14 +3,14 @@ version: "3"
 services:
   app:
     build: .
-    entrypoint: .docker/entrypoint.sh
+    entrypoint: .docker/entrypoint-tests.sh
     container_name: mongodb-crud-to-do-list
-    ports:
-      - "3000:3000"
     volumes:
       - .:/home/node/app
     depends_on:
       - mongodb
+    environment:
+      - NODE_ENV=test
 
   mongodb:
     image: mongo:latest
@@ -18,8 +18,4 @@ services:
     restart: always
     ports:
       - 27017:27017
-    volumes:
-      - mongodb_data_container:/data/db
-      
-volumes:
-  mongodb_data_container:
+    
