--- a/currency-conversion-async/.env.example
+++ b/currency-conversion-async/.env.example
@@ -2,7 +2,8 @@ APP_PORT=3000
 BASE_URL=
 NAME=currency-conversion-async
 
-OPENEXCHANGESRATES_API=
+EXCHANGE_API_KEY=
+EXCHANGE_API_URL=https://api.apilayer.com
 
 QUEUE=sample-queue
 QUEUE_URL=http://127.0.0.1:4566/000000000000/sample-queue
@@ -11,5 +12,9 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=dummy
 AWS_SECRET_ACCESS_KEY=dummy
 
-MONGODB_URL=mongodb://mongodb:27017
-MONGODB_TESTS_URL=mongodb://mongodb:27017
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_TESTS_URL=mongodb://localhost:27017
+
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_USER=
+MAIL_PASS=
