--- a/currency-conversion-async/.env.example
+++ b/currency-conversion-async/.env.example
@@ -5,8 +5,8 @@ NAME=currency-conversion-async
 EXCHANGE_API_KEY=
 EXCHANGE_API_URL=https://api.apilayer.com
 
-QUEUE=sample-queue
-QUEUE_URL=http://127.0.0.1:4566/000000000000/sample-queue
+QUEUE_INPUT_ORDERS=sample-queue
+QUEUE_INPUT_ORDERS_URL=http://127.0.0.1:4566/000000000000/sample-queue
 
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=dummy
