--- a/currency-conversion-async/.env.example
+++ b/currency-conversion-async/.env.example
@@ -18,3 +18,4 @@ MONGODB_TESTS_URL=mongodb://localhost:27017
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_USER=
 MAIL_PASS=
+MAIL_SENDER=example@mailtrap.com
