--- a/currency-conversion-async/backend/docker-compose.yml
+++ b/currency-conversion-async/backend/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    restart: always
     image: localstack/localstack
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
