add cypress; add pipelines; add react tests

--- a/currency-conversion-async/backend/docker-compose-ci.yml
+++ b/currency-conversion-async/backend/docker-compose-ci.yml
@@ -18,7 +18,7 @@ services:
 
   app:
     build: .
-    entrypoint: .docker/entrypoint.sh
+    entrypoint: .docker/entrypoint-tests.sh
     container_name: currency-conversion-async
     ports:
       - "8080:8080"
