--- a/currency-conversion-async/frontend/package.json
+++ b/currency-conversion-async/frontend/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.0.1",
@@ -24,11 +25,14 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "18.0.9",
     "@types/testing-library__jest-dom": "5.14.5",
+    "cypress": "^12.7.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "node-fetch": "^3.3.0",
     "typescript": "4.6.4"
   }
 }
